# ChangeLog for dev-java/java-config
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.136 2007/01/13 12:35:42 caster Exp $

  13 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  java-config-2.0.30.ebuild:
  Fixing current stable too.

  13 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  java-config-2.0.31.ebuild:
  I broke this with my last revision bump. Fixing it because it is a stable
  candidate.

*java-config-2.0.31-r1 (12 Jan 2007)

  12 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  -files/java-config-2.profiled, +files/java-config-2.profiled.csh,
  +files/java-config-2.profiled.sh, +java-config-2.0.31-r1.ebuild:
  Added /etc/profile.d/ file for c shells. Fixes bug #159736. Thanks to Troy
  Bowman <troy@dublan.net>.

*java-config-2.0.31 (17 Dec 2006)

  17 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  +java-config-2.0.31.ebuild:
  Version bump. Fixes bug #156228 and bug #154493.

  08 Dec 2006; Vlastimil Babka <caster@gentoo.org>
  +files/jdk-defaults-x86-fbsd.conf, java-config-2.0.30.ebuild:
  Add jdk-defaults.conf for x86-fbsd, bug #157380 was partially caused by this
  file missing.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  java-config-1.3.7.ebuild, java-config-2.0.30.ebuild:
  ppc stable. bug #147254

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on ia64 as part of new Java system, bug #147254.

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Fixed wording in postinstall message.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on ppc64 as part of new Java system, bug #147254.
