@@ -1,0 +1,3 @@
+MD5 36b7893b20b9f4b6f0af6dd632703745 java-config-2.0.31.tar.bz2 17001
+RMD160 4b3d8362538b435a642312ee7289824d6662e309 java-config-2.0.31.tar.bz2 17001
+SHA256 314ec1783da8190d60e757aaef2af8eae7281c3c9754024e3e59643ce7a30752 java-config-2.0.31.tar.bz2 17001
