@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/java-config
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.136 2007/01/13 12:35:42 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.137 2007/01/13 16:36:54 betelgeuse Exp $
+
+*java-config-2.0.31-r2 (13 Jan 2007)
+
+  13 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
+  files/java-config-2.profiled.csh, -java-config-2.0.31-r1.ebuild,
+  +java-config-2.0.31-r2.ebuild:
+  The csh profile.d had a bug preventing it from working for root. Teaches you
+  not to blindly trust stuff from users again.
 
   13 Jan 2007; Vlastimil Babka <caster@gentoo.org>
   java-config-2.0.30.ebuild:
